# serializer version: 1
# name: test_user_multiple_choice_field_fails_to_validate_nonexisting_users
  '''
  <input type="text" class="form-control d-js-none" id="id_users" name="users" value="John, Admin_User, Doe" >
  <ul class="form-chips-control d-js-flex" maxchoices="10" m-user-multiple-choice="id_users">
    
      <li m-user-multiple-choice-item m-user-name="John">
        
          <button class="form-chips-control-item-not-found" type="button" aria-label="Remove this user">
            <span class="form-chips-control-item-not-found-icon">
              <span class="material-icon">person_outline</span>
            </span>
            <span class="form-chips-control-item-name">
              John
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Admin_User" m-user-id="1000">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Admin_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Doe">
        
          <button class="form-chips-control-item-not-found" type="button" aria-label="Remove this user">
            <span class="form-chips-control-item-not-found-icon">
              <span class="material-icon">person_outline</span>
            </span>
            <span class="form-chips-control-item-name">
              Doe
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
    <li>
      <input type="text" class="form-chips-control-search" m-user-multiple-choice-search>
    </li>
  </ul>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_cleaned_data
  '''
  <input type="text" class="form-control d-js-none" id="id_users" name="users" value="Admin_User, Moderator, User, Other_User" >
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice="id_users">
    
      <li m-user-multiple-choice-item m-user-name="Admin_User" m-user-id="1000">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Admin_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Moderator" m-user-id="1001">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Moderator
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="User" m-user-id="1002">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Other_User" m-user-id="1003">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Other_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
    <li>
      <input type="text" class="form-chips-control-search" m-user-multiple-choice-search>
    </li>
  </ul>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_field_initial_data
  '''
  <input type="text" class="form-control d-js-none" id="id_users" name="users" value="Admin_User, Moderator, User, Other_User" >
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice="id_users">
    
      <li m-user-multiple-choice-item m-user-name="Admin_User" m-user-id="1000">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Admin_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Moderator" m-user-id="1001">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Moderator
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="User" m-user-id="1002">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Other_User" m-user-id="1003">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Other_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
    <li>
      <input type="text" class="form-chips-control-search" m-user-multiple-choice-search>
    </li>
  </ul>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_form_initial_data
  '''
  <input type="text" class="form-control d-js-none" id="id_users" name="users" value="Admin_User, Moderator, User, Other_User" >
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice="id_users">
    
      <li m-user-multiple-choice-item m-user-name="Admin_User" m-user-id="1000">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Admin_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Moderator" m-user-id="1001">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Moderator
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="User" m-user-id="1002">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Other_User" m-user-id="1003">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Other_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
    <li>
      <input type="text" class="form-chips-control-search" m-user-multiple-choice-search>
    </li>
  </ul>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_submitted_data
  '''
  <input type="text" class="form-control d-js-none" id="id_users" name="users" value="Admin_User, Moderator, User, Other_User" >
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice="id_users">
    
      <li m-user-multiple-choice-item m-user-name="Admin_User" m-user-id="1000">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Admin_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Moderator" m-user-id="1001">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Moderator
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="User" m-user-id="1002">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
      <li m-user-multiple-choice-item m-user-name="Other_User" m-user-id="1003">
        
          <button class="form-chips-control-item" type="button" aria-label="Remove this user">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            <span class="form-chips-control-item-name">
              Other_User
            </span>
            <span class="form-chips-control-item-close-icon">
              <span class="material-icon">clear</span>
            </span>
          </button>
        
      </li>
    
    <li>
      <input type="text" class="form-chips-control-search" m-user-multiple-choice-search>
    </li>
  </ul>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_without_data
  '''
  <input type="text" class="form-control d-js-none" id="id_users" name="users" value="" >
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice="id_users">
    
    <li>
      <input type="text" class="form-chips-control-search" m-user-multiple-choice-search>
    </li>
  </ul>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
